ECL 1.0:
========

* New platforms:

 - Support for GNU/kFreeBSD

* New features:

 - New commands, :RESTART, :R1, :R2, etc, allow invoking restarts (contributed
   by Chui Tey).

 - Interpreted functions can now be disassembled in the debugger. The commands
   are :D and :DISASSEMBLE.

 - New (private) function EXT::FUNCTION-LAMBDA-LIST, returns the lambda list of
   a function whenever it was recorded.

* Bugs fixed:

 - STREAMP signals an error for Gray streams.

 - ENOUGH-NAMESTRING provided too large directory names (Contributed by Tim S)

 - ADJUST-ARRAY accepted a fill-pointer even for arrays that did not have any.

 - Instead of using SHORT-FLOAT and LONG-FLOAT as basic floating point types,
   we use SINGLE-FLOAT and DOUBLE-FLOAT now. The names of the C functions have
   changed accordingly (Contributed by Lars Brinkhoff).

 - There was a problem with the variable capture when creating accessors
   methods for classes.

 - [Win32] Processes are now correctly listed with MP:ALL-PROCESSES (M. Goffioul)

 - [Win32] DIRECTORY now lists root directory correctly (M. Goffioul)

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***